# agent-evals

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  package.json  pnpm-lock.yaml  turbo.json
.claude-plugin/: plugin.json
.cursor/rules/: issue-workflow.mdc  mdx-docs.mdc
.github/workflows/: cli-ci.yml  cli-preview.yml  cli-release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/commands/: audit.rs  build.rs  create.rs  list.rs  mod.rs  preflight.rs  registry.rs  results.rs  run.rs  validate.rs
apps/cli/tests/: cli_e2e.rs  cli_integration.rs
apps/web/: flags.ts  mdx-components.tsx  next.config.mjs  package.json  source.config.ts
docker/: build.sh
docker/.tmp/: harness-classic-de.sh
docker/agent/: Dockerfile
docker/base/: Dockerfile  entrypoint.sh  redpanda.yaml
docker/harness/: Dockerfile
docker/scenario/: Dockerfile
releases/0.1/: channel-copy.md  demo-script.md  early-users.md  faq-talking-points.md  feedback-triage.md  internal-launch-kit.md  launch-checklist.md  success-metrics.md
results/: foo-bar-csv-ingest-1773429134.agent-raw.json  foo-bar-csv-ingest-1773429134.assertion-log.json  foo-bar-csv-ingest-1773429134.json  foo-bar-csv-ingest-1773429134.session.jsonl  foo-bar-csv-ingest-1773429134.stderr  foo-bar-csv-ingest-1773429134.stdout  foo-bar-csv-ingest-1773429134.trace.json  initial-benchmark-batch-summary.csv  initial-benchmark-batch-summary.json
scenarios/ecommerce-pipeline-recovery/: scenario.json
scripts/: llm-pricing.mjs  llm-pricing.test.mjs  rewrite-llm-metrics.mjs  rewrite-normalized-scores.mjs
(+787 files in other folders)
